tests/ui/coroutine/static-closure-unexpanded.stderr
error[E0658]: coroutine syntax is experimental
  --> $DIR/static-closure-unexpanded.rs:6:13
   |
LL |     let _ = static || {};
   |             ^^^^^^
   |
   = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
   = help: add `#![feature(coroutines)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
